// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Testing snapshot for Sprig's identifyUser destination action: all fields 1`] = `
Object {
  "attributes": Object {
    "testType": "hOFNL2ws[z[aEmV4l*6",
  },
  "userId": "hOFNL2ws[z[aEmV4l*6",
}
`;

exports[`Testing snapshot for Sprig's identifyUser destination action: required fields 1`] = `
Object {
  "userId": "hOFNL2ws[z[aEmV4l*6",
}
`;
